metadata-classic/objects/AttachmentEvent__e.object
<CustomObject>
    <description>Event raised when an attachment is saved</description>
    <fields>
        <fullName>RecordId__c</fullName>
        <label>Record ID</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordName__c</fullName>
        <label>Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>Attachment Event</label>
    <pluralLabel>Attachment Events</pluralLabel>
</CustomObject>